...
                    Spacer(modifier = modifier.width(dimensionResource(id = R.dimen.paddingSmallest)))
                    Text(text = stringResource(id = currTopBarTitle),modifier = Modifier.testTag("tbTitle"))
                }
            },
            navigationIcon = {
                if (topBarCanNavigateUp){
                    IconButton(onClick = navigateUp, modifier=modifier.testTag("backButton")) {
                        Icon(
                            imageVector = Icons.Filled.ArrowBack,
                            contentDescription = stringResource(id = R.string.back_button)
                        )
                    }
                }
...
