...
                verticalArrangement = Arrangement.Center

            ) {
                Image(
                    painter = painterResource(id = cat.image),
                    contentDescription = null,
                    modifier = Modifier.fillMaxSize().testTag("tagImage")
                )
                Spacer(modifier = modifier.padding(top = dimensionResource(id = R.dimen.paddingLarge)))
                Text(
                    text = stringResource(id = cat.description),
                    modifier = Modifier.fillMaxSize(),
                    color = MaterialTheme.colorScheme.onBackground
...
